--- a/.pylintrc
+++ b/.pylintrc
@@ -67,7 +67,7 @@ limit-inference-results=100
 fail-under=10.0
 
 # Return non-zero exit code if any of these messages/categories are detected,
-# even if score is above --fail-under value. Syntax same as enable. Messages
+# even if score is above --fail-under self. Syntax same as enable. Messages
 # specified are enabled, while categories only check already-enabled messages.
 fail-on=
 
