--- a/.env.template
+++ b/.env.template
@@ -4,5 +4,6 @@ ALLOWED_HOSTS=localhost,127.0.0.1
 
 BOT_TOKEN=527407998:AAEhQD8PPUw
 ADMINS_LIST=51256566641
+CHAT_ID_DEFAULT=-10000000
 
 GISMETEO_TOKEN=yourtoken
