--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 aiogram==2.25.1
 Django==4.2.2
+django-autocomplete-light==3.9.7
 environs==9.5.0
 aiopygismeteo==5.2.0
+asgiref==3.7.2
+requests==2.31.0
